# raytracer

./: .gitignore  Cargo.toml  Makefile  README.md  gpu.sh  run.sh
raytracer-cpu/: Cargo.toml
raytracer-cpu/src/: camera.rs  interval.rs  main.rs  material.rs  random.rs  texture.rs  utils.rs  vector.rs  volumes.rs
raytracer-cpu/src/scenes/: checkered_spheres.rs  cornell.rs  cornell_smoke.rs  perlin.rs  the_week_after.rs
raytracer-gpu/: Cargo.toml
raytracer-gpu/src/: algebra.rs  camera.rs  main.rs  render.rs  shaders.wgsl
src/: camera.rs  color.rs  hittables.rs  image.rs  interval.rs  main.rs  material.rs  perlin.rs  quad.rs  random.rs  ray.rs  sphere.rs  texture.rs  vector.rs  volumes.rs  world.rs
src/scenes/: bouncing_spheres.rs  checkered_spheres.rs  cornell.rs  earth.rs  light.rs  mod.rs  perlin.rs  quads.rs
