[workspace]
members = [
    "raytracer-cpu",
    "raytracer-gpu"
]
resolver = "2"

[workspace.package]
# name = "raytracer"
version = "0.1.0"
edition = "2021"

# [workspace.dependencies]
# rand = "0.8.5"
# rand_distr = "0.4.3"
# rayon = "1.10.0"
# stb = { version = "0.3.2", default-features = false , features = ["stb_image"]}
